--- a/test-predict.ipynb
+++ b/test-predict.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,22 +50,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction from TFServing: [0.0, 0.0, 1.0]\n",
-      "Index class predicted: 2\n",
-      "Class name predicted: Scissor\n"
+      "Prediction from TFServing: [0.0, 1.0, 0.0]\n",
+      "Index class predicted: 1\n",
+      "Class name predicted: Rock\n"
      ]
     }
    ],
    "source": [
     "test_predict(\n",
-    "    path=\"sample_data/scissors.webp\",\n",
+    "    path=\"sample_data/rock4.jpg\",\n",
     "    endpoint =\"http://localhost:8080/v1/models/kertas-batu-gunting:predict\"\n",
     ")"
    ]
@@ -79,10 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction from TFServing: [0.0, 1.0, 0.0]\n",
+      "Index class predicted: 1\n",
+      "Class name predicted: Rock\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_predict(\n",
+    "    path=\"sample_data/rock4.jpg\",\n",
+    "    endpoint =\"https://kertas-batu-gunting-qguw2amrfq-et.a.run.app/v1/models/kertas-batu-gunting:predict\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
